[gd_scene load_steps=6 format=2]

[ext_resource path="res://Components/Bullet/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Code.gd" type="Script" id=2]
[ext_resource path="res://Components/Turret/turret.gd" type="Script" id=3]
[ext_resource path="res://Components/Turret/Turret.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

[node name="Turret" type="StaticBody2D" groups=["Turret"]]
script = ExtResource( 2 )
valid_lines = Vector2( 2, 2 )
code = "#Change target (Soldier, Player, Turret)
# CODE START
target = Player
#CODE END"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Cone" type="Sprite" parent="."]
position = Vector2( -3.57628e-07, -1.19209e-07 )
scale = Vector2( 0.5625, 0.488052 )
texture = ExtResource( 4 )

[node name="CommandObject" type="Node2D" parent="."]
script = ExtResource( 3 )
bullet = ExtResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="CommandObject"]
enabled = true
cast_to = Vector2( -88, 0 )
collision_mask = 2

[node name="Timer" type="Timer" parent="CommandObject"]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 0, -1 )
rotation = 1.57079
scale = Vector2( 1, 1.63426 )
polygon = PoolVector2Array( 0, 0, -24, 54, 25, 54 )

[connection signal="timeout" from="CommandObject/Timer" to="CommandObject" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="CommandObject" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="CommandObject" method="_on_Area2D_body_exited"]
